Added /change_config endpoint for ease of use

--- a/config.json
+++ b/config.json
@@ -1,5 +1,1 @@
-{
-    "dataset_path":"Data/imdb/IMDB_Dataset.csv",
-    "review_column":"review",
-    "rating_column":"sentiment"
-}
+{"dataset_path": "Data/imdb/IMDB_Dataset.csv", "review_column": "review", "rating_column": "sentiment"}
